20000423-15:57 GMT+1 Victor Szakats <info@szelvesz.hu>

   * source/compiler/hbusage.c
     + Added list of developers and documentors. This can be displayed with
       the /CREDIT switch.

   * doc/en/ht_gt.txt -> contrib/libgt/doc/en/hb_gt.txt
   * doc/en/ht_*.txt -> contrib/libmisc/doc/en/hb_*.txt
     * Moved some CONTRIB docs to the CONTRIB dirs.
       ! PLEASE UPDATE THE DOC SCRIPTS !
   
20000423-14:35 GMT+1 Victor Szakats <info@szelvesz.hu>

   * source/pp/Makefile
   - source/pp/stdalone/Makefile
   - source/pp/stdalone/hbpp.c
   + utils/hbpp/Makefile
   + utils/hbpp/hbpp.c
   * utils/Makefile
   * makefile.bc
   * makefile.vc (not tested)
     * HBPP.EXE source files moved to utils/hbpp from source/pp/stdalone/

20000423-14:23 GMT+1 Victor Szakats <info@szelvesz.hu>

   * source/rtl/alert.prg
   * source/rtl/tclass.prg
     % Minor optimization

   * source/vm/hvm.c
     ! Restored previous version, due to bugs.

20000423-12:23 GMT+1 Victor Szakats <info@szelvesz.hu>

   + contrib/libct/makefile.bc
   + contrib/libct/makefile.vc
   + contrib/libgt/makefile.bc
   + contrib/libgt/makefile.vc
   + contrib/libmisc/makefile.bc
   + contrib/libmisc/makefile.vc
   + contrib/libct/make_b32.bat
   + contrib/libct/make_vc.bat
   + contrib/libgt/make_b32.bat
   + contrib/libgt/make_vc.bat 
   + contrib/libmisc/make_b32.bat
   + contrib/libmisc/make_vc.bat 
     + Added makefiles

   * contrib/libct/ctchrodd.c
   * contrib/libct/readme.txt
     ! Fixed bug.

   * bin/bld.*
     - Removed tools.

20000423-11:38 GMT+1 Victor Szakats <info@szelvesz.hu>

   + contrib/libct/*
   + contrib/libgt/*
   + contrib/libmisc/*
   - source/tools/*
   * source/Makefile
   * makefile.bc
   * makefile.vc
   * tests/Makefile
   * utils/hbrun/Makefile
   - utils/hbrun/exttools.prg
   + utils/hbrun/external.prg
     * TOOLS dir moved to CONTRIB, and split into three parts. CT_ prefixed
       removed from the CT function names.